Refactored minecraft text object logic with new custom builder class to simplify the process